--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
         steps:
             - node/install
             - checkout 
+            - aws-cli/setup
             - eb/setup
             - run:
                 name: Install Front-End Dependencies
