--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
             - node/install
             - checkout 
             - aws-cli/setup
+              profile-name: default
             - run:
                 name: Install Front-End Dependencies
                 command: npm run frontend:install
