--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 jobs:
     build:
         docker:
-            - image: "cimg/node:16"
+            - image: "cimg/base:stable"
         steps:
             - node/install
             - checkout 
