--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
-version: 2.1
+version: 2
 orbs:
-    node: circleci/node@5.0.1
-    aws-cli: circleci/aws-cli@3.1.1
-    eb: circleci/aws-elastic-beanstalk@2.0.1
+    node: circleci/node@4.1.0
+    aws-cli: circleci/aws-cli@1.3.1
+    eb: circleci/aws-elastic-beanstalk@1.0.2
 jobs:
     build:
         docker:
@@ -11,6 +11,7 @@ jobs:
             - node/install
             - checkout 
             - aws-cli/setup
+            - eb/setup
             - run:
                 name: Install Front-End Dependencies
                 command: npm run frontend:install
@@ -18,21 +19,14 @@ jobs:
                 name: Front-End Build
                 command: npm run frontend:build
             - run:
-                name: Deploy Frontend Application
-                command: npm run frontend:deploy                
-            - run:
                 name: Install Back-End Dependencies
                 command: npm run backend:install
-             - run:
-                name: change main enty 
-                command: npm run backend:change-main
             - run:
                 name: Back-End Build
                 command: npm run backend:build
-            -run:
-                name: install aws eb
-                command: npm run backend:aws-eb
             - run:
                 name: Deploy Backend Application
                 command: npm run backend:deploy
-    
+            - run:
+                name: Deploy Frontend Application
+                command: npm run frontend:deploy
