--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,16 @@
-version: 2
+version: 2.1
 orbs:
-    node: circleci/node@4.1.0
-    aws-cli: circleci/aws-cli@1.3.1
-    eb: circleci/aws-elastic-beanstalk@1.0.2
+    node: circleci/node@5.0.2
+    aws-cli: circleci/aws-cli@3.1.1
+    eb: circleci/aws-elastic-beanstalk@2.0.1
 jobs:
     build:
         docker:
-            - image: "cimg/base:stable"
+            - image: "cimg/node:14.15"
         steps:
             - node/install
+              node version: '14.15'
             - checkout 
-            - aws-cli/setup
-            - eb/setup
             - run:
                 name: Install Front-End Dependencies
                 command: npm run frontend:install
@@ -24,6 +23,15 @@ jobs:
             - run:
                 name: Back-End Build
                 command: npm run backend:build
+    deploy:
+        docker:
+            - image: "cimg/base:stable"
+        steps:
+            - node/install
+              node version: '14.15'
+            - eb/setup
+            - aws-cli/setup
+            - checkout
             - run:
                 name: Deploy Backend Application
                 command: npm run backend:deploy
