--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
     aws-cli: circleci/aws-cli@3.1.1
     eb: circleci/aws-elastic-beanstalk@2.0.1
 jobs:
-    build:
+    build-and-deploy:
         docker:
             - image: "cimg/base:stable"
         steps:
@@ -30,12 +30,3 @@ jobs:
             - run:
                 name: Deploy Frontend Application
                 command: npm run frontend:deploy
-workflows:
-    build:
-        jobs:
-           - build:
-              context: aws
-              fiters:
-                  branches:
-                      only:
-                          -main
