--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
     aws-cli: circleci/aws-cli@3.1.1
     eb: circleci/aws-elastic-beanstalk@2.0.1
 jobs:
-    build-and-deploy:
+    build:
         docker:
             - image: "cimg/base:stable"
         steps:
@@ -24,6 +24,13 @@ jobs:
             - run:
                 name: Back-End Build
                 command: npm run backend:build
+    deploy:
+        docker:
+            - image: "cimg/base:stable"
+        steps:
+            - eb/setup 
+            - aws-cli/setup
+            - checkout 
             - run:
                 name: Deploy Backend Application
                 command: npm run backend:deploy
