--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,6 @@ jobs:
             - image: "cimg/base:stable"
         steps:
             - node/install
-            - eb/setup 
-            - aws-cli/setup
             - checkout 
             - run:
                 name: Install Front-End Dependencies
@@ -37,3 +35,10 @@ jobs:
             - run:
                 name: Deploy Frontend Application
                 command: npm run frontend:deploy
+  workflows:
+      build-deploy:
+          jobs:
+            - build
+            - deploy
+               requires:
+                  -build              
