--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2.1
+version: 2
 orbs:
     node: circleci/node@5.0.2
     aws-cli: circleci/aws-cli@3.1.1
@@ -6,7 +6,7 @@ orbs:
 jobs:
     build:
         docker:
-            - image: "cimg/base:stable"
+            - image: "cimg/node:14.15"
         steps:
             - node/install
             - checkout 
@@ -26,6 +26,7 @@ jobs:
         docker:
             - image: "cimg/base:stable"
         steps:
+            - node/install
             - eb/setup 
             - aws-cli/setup
             - checkout 
@@ -35,7 +36,8 @@ jobs:
             - run:
                 name: Deploy Frontend Application
                 command: npm run frontend:deploy
-  workflow:
+  workflows:
+      version: 2
       build-deploy:
           jobs:
             - build
