--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2
+
+
 orbs:
     node: circleci/node@5.0.2
     aws-cli: circleci/aws-cli@3.1.1
@@ -36,9 +38,12 @@ jobs:
             - run:
                 name: Deploy Frontend Application
                 command: npm run frontend:deploy
+
   workflows:
       version: 2
-      build-deploy:
+
+  
+      my-workflows:
           jobs:
             - build
             - deploy
