--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,10 @@ orbs:
     node: circleci/node@5.0.2
     aws-cli: circleci/aws-cli@3.1.1
     eb: circleci/aws-elastic-beanstalk@2.0.1
-jobs:
-    build:
+workflows:
+    my-workflows:
+        jobs:
+    - build:
         docker:
             - image: "cimg/node:14.15"
         steps:
@@ -24,7 +26,7 @@ jobs:
             - run:
                 name: Back-End Build
                 command: npm run backend:build
-    deploy:
+    - deploy:
         docker:
             - image: "cimg/base:stable"
         steps:
@@ -37,15 +39,4 @@ jobs:
                 command: npm run backend:deploy
             - run:
                 name: Deploy Frontend Application
-                command: npm run frontend:deploy
-
-  workflows:
-      version: 2
-
-  
-      my-workflows:
-          jobs:
-            - build
-            - deploy
-               requires:
-                  -build              
+                command: npm run frontend:deploy           
