--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,12 @@ orbs:
     node: circleci/node@5.0.2
     aws-cli: circleci/aws-cli@3.1.1
     eb: circleci/aws-elastic-beanstalk@2.0.1
+
+
 jobs:
     build:
         docker:
-            - image: "cimg/node:14.15"
+            - image: "cimg/base:stable"
         steps:
             - node/install
             - checkout 
@@ -22,6 +24,8 @@ jobs:
             - run:
                 name: Back-End Build
                 command: npm run backend:build
+
+
     deploy:
         docker:
             - image: "cimg/base:stable"
@@ -38,7 +42,7 @@ jobs:
                 command: npm run frontend:deploy
 
   workflows:
-      version: 2.1
+      version: 2
       my-work:
           jobs:
             - build
