--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,8 @@
 version: 2.1
+orbs:
+    node: circleci/node@5.0.2
+    aws-cli: circleci/aws-cli@3.1.1
+    eb: circleci/aws-elastic-beanstalk@2.0.1
 jobs:
     build:
         docker:
@@ -32,7 +36,9 @@ jobs:
             - run:
                 name: Deploy Frontend Application
                 command: npm run frontend:deploy
+
 workflows:
+      version: 2
       my-work:
           jobs:
             - build
