--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,4 +43,6 @@ workflows:
           jobs:
             - build
             - deploy
+                requires:
+                  -build
             
