--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,6 @@ workflows:
           jobs:
             - build
             - deploy
-                requires:
-                  -build
+                requires
+                  - build
             
