--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
         steps:
             - node/install
             - checkout 
+            - aws-cli/setup
+            - eb/setup
             - run:
                 name: Install Front-End Dependencies
                 command: npm run frontend:install
