--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,5 +29,5 @@ jobs:
                 command: npm run backend:build
             - run:
                 name: Deploy Backend Application
-                command: npm run backend:deploy
+                command: npm run frontend:deploy
             
