--- a/udagram/udagram-api/.elasticbeanstalk/config.yml
+++ b/udagram/udagram-api/.elasticbeanstalk/config.yml
@@ -1,6 +1,6 @@
 branch-defaults:
   default:
-    environment: Udagramapi-env-1
+    environment: null
 deploy:
   artifact: www/Archive.zip
 global:
