--- a/udagram/udagram-api/.elasticbeanstalk/config.yml
+++ b/udagram/udagram-api/.elasticbeanstalk/config.yml
@@ -1,6 +1,6 @@
 branch-defaults:
   default:
-    environment: Udagramapi-env-3
+    environment: Udagramapi-env-2
 deploy:
   artifact: www/Archive.zip
 global:
@@ -8,7 +8,7 @@ global:
   branch: null
   default_ec2_keyname: null
   default_platform: Node.js
-  default_region: us-east-1
+  default_region: us-west-2
   include_git_submodules: true
   instance_profile: null
   platform_name: null
