--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,11 +30,12 @@ jobs:
       - run:
           name: Deploy Backend Application
           command: npm run backend:deploy
-workflows:
-    build:
-      jobs:
-        - build
+workflow:
+  build:
+    jobs:
+      - build:
+          context: aws
           filter:
             branches:
               only:
-                main
+                - main
